--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,9 @@
   <body>
     <div id="app">
       <!-- 白屏时的loading效果 -->
+       <!-- 加载中 -->
       <div class="loading-container">
-        <div id="loadingLogo" class="loading-svg"></div>
+        <!-- <div id="loadingLogo" class="loading-svg"></div> -->
         <div class="loading-spin__container">
           <div class="loading-spin">
             <div class="left-0 top-0 loading-spin-item"></div>
